# AppServer

./: .gitignore  CMakeLists.txt  README.md
apps/webbrowser/: CMakeLists.txt
apps/webbrowser/webbrowser/: CMakeLists.txt  webbrowser.cpp
appserver/: CMakeLists.txt
appserver/shared/: events.h  protocol.h
appserver/src/: App.cpp  App.h  Compositor.h  EventSource.h  Events.h  GLCompositor.h  GLWindow.cpp  GLWindow.h  Geometry.cpp  GlfwInputSource.cpp  GlfwInputSource.h  GlfwWorkspace.cpp  InputSource.cpp  InputSource.h  SDLCompositor.cpp  SDLCompositor.h  SDLEventSource.cpp  SDLEventSource.h  SDLInputSource.cpp  SDLInputSource.h  SDLWindow.cpp  SDLWindow.h  SDLWorkspace.cpp  SDLWorkspace.h  Server.cpp  Server.h  Window.h  WindowManager.cpp  WindowManager.h  Workspace.cpp  Workspace.h  app.cpp  app.h  compositor.cpp  compositor.h  eventsource.h  geometry.h  main.cpp  qtwindow.cpp  qtwindow.h  (+12 more)
appserverlib/: CMakeLists.txt
appserverlib/include/Asl/: Connector.h  Logger.h  Utils.h
appserverlib/src/: CApi.cpp  Connector.cpp  Logger.cpp
desktop/: CMakeLists.txt
desktop/appserverlib/: CMakeLists.txt
desktop/appserverlib/include/Asl/: Protocol.h
desktop/appserverlib/src/: Connector.cpp  Utils.cpp
desktop/include/: App.h  Compositor.h  Geometry.h  HCompositor.h  HWindow.h  InputSource.h  Server.h  Window.h  WindowManager.h  Workspace.h
desktop/include/glfw/: GlfwInputSource.h  GlfwWorkspace.h
desktop/src/: App.cpp  Compositor.cpp  HCompositor.cpp  HWindow.cpp  Server.cpp  Window.cpp  WindowManager.cpp  main.cpp
desktop/src/glfw/: GlfwInputSource.cpp  GlfwWorkspace.cpp
headers/: protocol.h
processmonitor/: CMakeLists.txt  processmonitor.cpp
processmonitor/src/: processmonitor.cpp
sdk/: CMakeLists.txt
sdk/asl/: CMakeLists.txt
sdk/asl/include/Asl/: CApi.h  Connector.h
sdk/asl/include/asl/: asl.h  keycode.h  scancode.h
sdk/asl/include/private/: connector.h
sdk/asl/src/: CApi.cpp  Connector.cpp  asl.cpp  connector.cpp
sdk/asl/tests/cef/: CMakeLists.txt  README.txt  macros.cmake
sdk/asl/tests/cef-test/: CMakeLists.txt  main.cpp
sdk/asl/tests/test1/: CMakeLists.txt  main.cpp
sdk/coffeecode/src/com/medar/coffeecode/app/: App.java  Asl.java  Event.java  InputEvent.java  KeyEvent.java  MouseEvent.java  Resources.java  View.java  Window.java  WindowLocationChangedEvent.java
sdk/coffeecode/src/com/medar/coffeecode/graphics/: NinePatch.java  Point.java  PointF.java  Rect.java  RectF.java  Size.java  SizeF.java
sdk/coffeecode/src/com/medar/coffeecode/test/: Main.java  SimpleAppListener.java  TestAppListener.java
sdk/nativecode/: CMakeLists.txt
sdk/nativecode/include/nativecode/: application.h  geometry.h  graphics.h  input.h  nativecode.h  view.h  window.h
sdk/nativecode/include/private/: server.h
sdk/nativecode/src/: application.cpp  geometry.cpp  graphics.cpp  server.cpp  view.cpp  window.cpp
sdk/nativecode/tests/test1/: CMakeLists.txt  main.cpp
sdk/nativecode/tests/test2/: CMakeLists.txt  main.cpp
src/: App.cpp  App.h  Compositor.h  GLCompositor.cpp  GLWindow.cpp  GlfwWorkspace.cpp  GlfwWorkspace.h  InputSource.cpp  InputSource.h  SDLCompositor.h  SDLInputSource.cpp  SDLInputSource.h  SDLWindow.cpp  SDLWindow.h  SDLWorkspace.cpp  Server.cpp  Server.h  Window.h  WindowManager.h  Workspace.cpp  Workspace.h  main.cpp
